Fix flex alignment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,8 +26,9 @@
   .input-and-discounts {
     display: flex;
     flex-wrap: wrap;
-
+    align-items: flex-start;
     justify-content: center;
-    justify-items: flex-start;
+
+    height: 100%;
   }
 }
